package Proxy;

public interface Internet {
    public void connectTo(String serverhost);
}
